--- a/style.css
+++ b/style.css
@@ -38,11 +38,88 @@ header .logo{
     position: relative;
 }
 .section1 h1{
-    font-size: 48px;
+    font-size: 60px;
     font-weight: 700;
     margin-bottom: 40px;
 }
 .section1 .text{
-    font-size: 20px;
+    font-size: 30px;
     margin-bottom: 40px;
+}
+
+
+.section2{
+    padding-top: 45px; 
+    margin-bottom: 60px;
+}
+.section2 h2{
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 18px;
+    line-height: 1.3;
+}
+.section2 hr{
+    border: solid 2px #2cb67d;
+    margin-bottom: 20px;
+    width: 60px;
+}
+.section2 .text{
+    line-height: 1.5;
+}
+
+
+
+
+.section3{
+    padding-top: 45px; /*上に余白*/
+    margin-bottom: 60px; /*下に余白*/
+}
+
+.section3 .container{
+    max-width: 1080px;
+    width: 90%;
+    margin: 0 auto; /*中央寄せ*/
+}
+
+.section3 .row{
+    display: flex; /*横並び*/
+    justify-content: space-between; /*両端寄せ*/
+    flex-wrap: wrap;
+    align-items: center; /*上下中央による*/
+    margin-bottom: 60px;
+}
+.section3 .col{
+    width: 46%; /*横並び　左４６％　真ん中８％　右４６％*/
+}
+
+.section3 h2{
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 18px;
+    line-height: 1.3; /*行間*/
+}
+
+.section3 hr{
+    border: solid 2px #2cb67d;
+    margin-bottom: 20px;
+    width: 60px; /*横幅*/
+}
+
+.section3 .text{
+    line-height: 1.5; /*行間*/
+}
+
+.section3 a {
+    font-size: 16px;
+    font-weight: 700;
+    padding: 16px 40px 20px 40px; /*上　右　下　左 (右左が同じな時は左を省略してもよい）*/
+    display: inline-block;
+    background-color: #7f5af0;
+    border-radius: 6px; /*角を丸める*/
+    letter-spacing: 2px; /*文字間隔*/
+    transition-duration: .2s; /*hoverをゆっくり変化させる*/
+}
+
+.section3 a:hover{ /*カーソルを当てたときの効果*/
+    background-color: #2cb67d;
 }
