--- a/style.css
+++ b/style.css
@@ -123,3 +123,30 @@ header .logo{
 .section3 a:hover{ /*カーソルを当てたときの効果*/
     background-color: #2cb67d;
 }
+
+footer{
+    background-color: #ffffff;
+    text-align: center;
+    color: #161616;
+    font-size: 11px;
+    letter-spacing: 1px; /*文字幅*/
+    padding: 20px 0;
+}
+
+/*スマホ対応させる*/
+@media screen and (max-width: 767px){
+    .section1 .container{
+        width: 98%;
+    }
+    .section1 .h1{
+        font-size: 27px;
+    }
+    .section2 .col{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .section3 .col{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+}
