--- a/style.css
+++ b/style.css
@@ -52,6 +52,11 @@ header .logo{
     padding-top: 45px; 
     margin-bottom: 60px;
 }
+.section3 .container{
+    max-width: 1080px;
+    width: 90%;
+    margin: 0 auto; /*中央寄せ*/
+}
 .section2 h2{
     font-size: 28px;
     font-weight: 700;
