--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header .logo{
 }
 
 .section1 {
-    background-image: url(https://gohan-desu.github.io/icpcyuhifes.github.io/images/AdobeStock_352006175.jpeg);
+    background-image: url(https://gohan-desu.github.io/icpc_yuhifes.github.io/images/AdobeStock_352006175.jpeg);
     background-position:center bottom;
     background-size: cover;
     height: 100vh;
@@ -52,7 +52,7 @@ header .logo{
     padding-top: 45px; 
     margin-bottom: 60px;
 }
-.section3 .container{
+.section2 .container{
     max-width: 1080px;
     width: 90%;
     margin: 0 auto; /*中央寄せ*/
