--- a/style.css
+++ b/style.css
@@ -57,6 +57,13 @@ header .logo{
     width: 90%;
     margin: 0 auto; /*中央寄せ*/
 }
+.section2 .row{
+    display: flex; /*横並び*/
+    justify-content: space-between; /*両端寄せ*/
+    flex-wrap: wrap;
+    align-items: center; /*上下中央による*/
+    margin-bottom: 60px;
+}
 .section2 h2{
     font-size: 28px;
     font-weight: 700;
