--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header .logo{
 }
 
 .section1 {
-    background-image: url(https://gohan-desu.github.io/icpc_yuhifes.github.io/images/AdobeStock_352006175.jpeg);
+    background-image: url(https://gohan-desu.github.io/icpc_yuhifes/images/AdobeStock_352006175.jpeg);
     background-position:center bottom;
     background-size: cover;
     height: 100vh;
